Sun Oct 25 08:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSObject.m: Cache implementation for adding object to autorelease
	pool to avoid objc runtime messaging overhead.
	src/NSAutoreleasePool.m: Cache implementation for adding object to
	src/NSAutoreleasePool.m: Cache implementation for adding object to
	autorelease pool to avoid objc runtime messaging overhead.
	src/NSGCString.m: Implemented ([+allocWithZone:])
	src/NSGString.m: Implemented ([+allocWithZone:])

Sat Oct 24 11:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSArchiver.m: New implementation
	src/NSArchiver.m: New file
	src/GNUmakefile: Added NSUnarchiver.m
	src/include/NSArchiver.h: New version
	New Archiver/unarchiver - OPENSTEP complient (I think).
	Basic functionality tested fairly thoroughly, some of the more
	unusual bits untested so far. Mechanisms for adding other backends
	in place, but untested. Performance may be around four times that
	of the old version though there is still a little (very little)
	room for improvement.

Thu Oct 22 21:45:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSData.m: Added support for serialisation of Class and SEL types
	and made a more efficient version of the main deserialisation code
	int the NSDataStatic class.

Wed Oct 21 13:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSData.m: Reorganized and optimised.
	src/NSGArray.m: optimised coding/decoding
	src NSGCountedSet.m: optimised coding/decoding
	src/NSGDictionary.m: optimised coding/decoding
	src/NSGSet.m: optimised coding/decoding
	src/NSObject.m: cache data classes
	src/NSString.m: Added (nonstandard) ([-boolValue]) method
	src/include/NSData.h: Added ([-relinquishAllocatedBytesFromZone:])
	src/include/NSString.h: Added (nonstandard) ([-boolValue]) method
	src/include/NSPortMessage.h: Added (as yet unused) class.
	src/NSPortMessage.m: Added (as yet unused) skeleton implementation.
